Fix unnecessary scrollbar in Chrome windows

--- a/web-ui/src/main/resources/catalog/views/sextant/less/gn_mapviewer_sextant.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/gn_mapviewer_sextant.less
@@ -154,6 +154,7 @@
     width: auto;
     display: block;
     line-height: 1.1em;
+    overflow-y: hidden;
     &.force-hide {
       display: none;
     }
